--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -41,6 +41,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/3.png
+    - ../cards/
+
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
