--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
     - icons/
+    - cards/
 #
 # For details regarding assets in packages, see
 # https://flutter.dev/assets-and-images/#from-packages
